# axtree-api

./: .gitignore  CONTRIBUTING.md  LICENSE  Package.swift  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
Sources/AXTreeDaemon/: main.swift
axtree_api/: __init__.py  core.py  vision.py
examples/: calculator_quickstart.py  vision_provider_example.py
scripts/: evaluate_notes_e2e.py  test_calculator_click.py  test_calculator_complex_expression.py  test_calculator_state.py  test_keyboard_command.py  test_python_calculator.py  test_vision_fallback.py
